Knife tool fails to cut from an edge to a vertex #42611

Closed
opened 2014-11-15 22:09:00 +01:00 by Campbell Barton · 5 comments

The attached blend file fails to cut a diagonal quad (follow the grease pencil marks), 2.72 knife_cut.blend

The attached blend file fails to cut a diagonal quad (follow the grease pencil marks), 2.72 [knife_cut.blend](https://archive.blender.org/developer/F124107/knife_cut.blend)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton self-assigned this 2014-11-15 22:09:00 +01:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by c6ab67bffc

This issue was referenced by c6ab67bffc84838bfc2b155ebd810dab8b860888
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Owner

Closed by commit c6ab67bffc.

Closed by commit c6ab67bffc.
Sign in to join this conversation.
2 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#42611
No description provided.