Fix T42611: Knife fails from an edge to a vertex